STM32 Projects/.metadata/.plugins/org.eclipse.cdt.ui/RPM_SENSOR.build.log
17:14:00 **** Incremental Build of configuration Debug for project RPM_SENSOR ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:159:39: error: 't0' undeclared (first use in this function)
  159 |                   if (HAL_GetTick() - t0 >= 100)   // cada 100 ms
      |                                       ^~
../Core/Src/main.c:159:39: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

17:14:01 Build Failed. 2 errors, 0 warnings. (took 865ms)

